# Anverali-test-task-April2024

./: README.md  pyproject.toml
internal/: main.py
internal/api/: handler.py
internal/db/: database.py
internal/utils/: constants.py  resolve_gender.py
tests/: test.py
